# psdoom-ng

./: README.md
patches/: psdoom-20120205-1.6.0.patch  psdoom-ng-1.6.0a.patch  psdoom-ng-2.2.1.patch  psdoom-ng-2016.01.15.2.2.1.patch  psdoom-ng-2016.01.16.2.2.1.patch  psdoom-ng-2025.06.08.3.1.0.patch  psdoom-ng-2025.06.09.3.1.0.patch
trunk/: CHANGELOG.psdoom-ng  Makefile.am  config.h  configure.ac  psd.in  psdoom-ng.conf.example
trunk/codeblocks/: config.h  game-res.rc  setup-res.rc
trunk/contrib/: psdoom-cf-ctl  psdoom-ng-cf-ctl.in
trunk/data/: Makefile.am
trunk/man/: Makefile.am  Makefile.am.rej  psdoom-ng.1
trunk/msvc/: config.h  win32.rc
trunk/setup/: pssetup.desktop
trunk/src/: Makefile.am  Makefile.am.rej  d_main.c  i_sdlsound.c  jdoom.pk3  p_mobj.h  pr_process.c  psdoom-ng.appdata.xml.in  r_defs.h  r_things.c
trunk/src/doom/: Makefile.am  d_main.c  d_main.c.rej  doomstat.h  doomstat.h.rej  g_game.c  g_game.c.rej  p_inter.c  p_inter.c.rej  p_mobj.c  p_mobj.c.rej  p_mobj.h  p_mobj.h.rej  p_setup.c  p_setup.c.rej  p_tick.c  p_tick.c.rej  pr_process.c  r_defs.h  r_defs.h.rej  r_things.c  r_things.c.rej  r_things.h  r_things.h.rej
